@@ -44,7 +44,10 @@ PZAN1(NMEAInputLine &line, NMEA_INFO *GPS_INFO, bool enable_baro)
 
   fixed baro_altitude;
   if (line.read_checked(baro_altitude))
-    GPS_INFO->ProvideBaroAltitude1013(NMEA_INFO::BARO_ALTITUDE_ZANDER,
+    /* the ZS1 documentation does not specify wheter the altitude is
+       STD or QNH, but Franz Poeschl confirmed via email that it is
+       the QNH altitude */
+    GPS_INFO->ProvideBaroAltitudeTrue(NMEA_INFO::BARO_ALTITUDE_ZANDER,
                                       baro_altitude);
 
   return true;
